<resources>
    <string name="app_name">NMedia</string>
    <string name="text_on_screen">NMedia!</string>
    <string name="avatar">Avater</string>
    <string name="likes">Likes</string>
    <string name="reposts">Reposts</string>
    <string name="views">Views</string>
    <string name="amountlikes">Likes</string>
    <string name="amountreposts">Reposts</string>
    <string name="amountviews">Views</string>
    <string name="remove">Remove</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="cont_error">Content should not be empty!</string>
    <string name="edit">Edit</string>
    <string name="edited_post">Edited post</string>
    <string name="post_id">Post Id</string>
    <string name="editedid">EditedId</string>
    <string name="cancel">Cancel</string>
    <string name="edited">Edited</string>
    <string name="post_author">Post author: </string>
    <string name="posts_id">Post ID: </string>
    <string name="chooser_share_post">Share post</string>
    <string name="addpost">addPost</string>
    <string name="video_link">Video link</string>
    <string name="toolsLink" translatable="false">https://www.youtube.com/watch?v=lS9Ml4Q8W2g</string>
    <string name="google_play_unavailable" translatable="false">Google Api Unavailable</string>
    <string name="notification_user_liked" translatable="false">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_published_new_post">%1$s published new post</string>
    <string name="channel_remote_name" translatable="false">Server notifications</string>
    <string name="channel_remote_description" translatable="false">Notifications from remote server</string>
    <string name="notification_unknow">Perhaps you may have a new notification</string>
</resources>